# gelato

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Common.cpp  Common.h  CompilerMessage.cpp  CompilerMessage.h  Config.cpp  Config.h  Daemon.cpp  Daemon.h  GelatoMessage.h  Job.cpp  Job.h  JobMessage.cpp  JobMessage.h  Response.h  Result.h  ResultMessage.h  Semifreddo.cpp  Stracciatella.cpp  gelato.cpp
